@@ -1,4 +1,4 @@
-%%ifdef DEB_MIN_SYSDEPS
+%%ifndef DEB_SYS_LIBXUL
 @LIBDIR@/@APPNAME@-bin
 %%ifdef DEB_ENABLE_IPC
 @LIBDIR@/plugin-container
