@@ -29,13 +29,16 @@ ac_add_options --enable-thumb2
 ac_add_options --with-system-jpeg=/usr
 ac_add_options --with-system-png=/usr
 ac_add_options --with-system-zlib=/usr
-ac_add_options --with-libxul-sdk=@DEBIAN_XUL_DEV@
-ac_add_options --with-system-libxul
-ac_add_options --enable-chrome-format=jar
 %%else
 ac_add_options --without-system-jpeg
 ac_add_options --without-system-png
 ac_add_options --without-system-zlib
+%%endif
+%%ifdef DEB_SYS_LIBXUL
+ac_add_options --with-libxul-sdk=@DEBIAN_XUL_DEV@
+ac_add_options --with-system-libxul
+ac_add_options --enable-chrome-format=jar
+%%else
 ac_add_options --enable-chrome-format=omni
 %%endif
 %%ifdef DEB_NO_OPTIMIZE
